# cyberlight

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_arm  Dockerfile_dev  README.md  TESTING.md  \  docker-compose.yml  fly.toml
.github/: FUNDING.yml
.github/workflows/: build_and_test.yml  deploy.yml  lint.yml  refresh-server.yml  rust.yml
services/: govee_api_service.rs
src/: error_handlers.rs  main.rs  routes.rs  services.rs  tests.rs  wrappers.rs
src/constants/: enums.rs
src/error_handlers/: custom_error_handlers.rs  error_handlers.rs  error_implementations.rs
src/implementations/: access_token.rs
src/routes/: all_devices_routes.rs  get_all_devices_routes.rs  healthcheck.rs  healthcheck_routes.rs  home_routes.rs  office_lamp_routes.rs  office_routes.rs  standing_routes.rs  tv_lamp_routes.rs
src/services/: govee_api_service.rs  light_setup_service.rs
src/tests/: all_devices_wrapper.rs  test_constants.rs  test_error_handlers.rs  test_implementations.rs  test_routes.rs  test_services.rs  test_wrappers.rs
src/tests/test_constants/: test_enums.rs
src/tests/test_error_handlers/: test_error_handlers.rs  test_error_implementations.rs
src/tests/test_implementations/: test_access_token.rs
src/tests/test_routes/: test_all_devices_routes.rs  test_healthcheck_routes.rs  test_home_routes.rs
src/tests/test_services/: test_govee_api_service.rs  test_light_setup_service.rs
src/tests/test_wrappers/: test_all_devices_wrapper.rs
src/wrappers/: all_devices_wrapper.rs
utils/: server_setup.sh
