[package]
name = "cyberlight"
authors = ["Maciej Gierada @mgierada"]
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
lazy_static = "1.5.0"
govee-api = {version = "1.3.6"}
# govee-api = {version = "1.3.0", path = "../../govee-api.git/add_clone_derive_to_PayloadBody/"}

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dev-dependencies]
mockito = "1.6.1"
tokio = {version = "1.41.1", features = ["full"]}

[[bin]]
name = "cyberligth"
path = "src/main.rs"

